fix table overflowing

--- a/main.css
+++ b/main.css
@@ -188,10 +188,7 @@ pre > code {
 
 table {
     border-collapse: collapse;
-    overflow-x: scroll;
-    max-width: 100%;
-    max-height: 1000px;
-    display: block;
+    word-break: break-word;
 }
 
 figcaption {
